Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P1: Critical
-
Resolution: Done
-
Affects Version/s: 6.2.0 FF
-
Fix Version/s: 6.2.0 Beta1
-
Component/s: Sensors
-
Labels:
Description
Download and extract 6.2.0 sources, SHA1 53220710f5e4487c10db908abc20c515aadeb99e.
Configure:
cmake -DCMAKE_C_COMPILER=gcc -DCMAKE_CXX_COMPILER=g++ -DQT_BUILD_EXAMPLES=OFF -DCMAKE_BUILD_TYPE=Release -DFEATURE_headersclean=ON -DFEATURE_separate_debug_info=OFF -DFEATURE_system_jpeg=OFF -DFEATURE_system_png=OFF -DFEATURE_system_pcre2=OFF -DFEATURE_system_harfbuzz=OFF -DFEATURE_system_doubleconversion=OFF -DFEATURE_libudev=OFF -DINPUT_bundled_xcb_xinput=yes -DOpenGL_GL_PREFERENCE=LEGACY -DQT_BUILD_TESTS=OFF /home/qt/RTA/src-6.2.0 -DCMAKE_INSTALL_PREFIX:PATH=/home/qt/RTA/src-6.2.0/qtbase
Build:
cmake --build . --parallel
Fails:
[6955/8357] Building CXX object qtsensors/src/plugins/sensors/sensortag/CMakeFiles/SensortagSensorPlugin.dir/sensortagbase.cpp.o FAILED: qtsensors/src/plugins/sensors/sensortag/CMakeFiles/SensortagSensorPlugin.dir/sensortagbase.cpp.o /usr/bin/g++ -DQT_BLUETOOTH_LIB -DQT_CORE_LIB -DQT_DBUS_LIB -DQT_DEPRECATED_WARNINGS -DQT_DEPRECATED_WARNINGS_SINCE=0x060000 -DQT_DISABLE_DEPRECATED_BEFORE=0x050000 -DQT_NETWORK_LIB -DQT_NO_DEBUG -DQT_NO_EXCEPTIONS -DQT_PLUGIN -DQT_SENSORS_LIB -DSensortagSensorPlugin_EXPORTS -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -Iqtsensors/src/plugins/sensors/sensortag/SensortagSensorPlugin_autogen/include -Iqtsensors/src/plugins/sensors/sensortag -Iqtbase/include -Iqtbase/include/QtBluetooth -Iqtbase/include/QtCore -Iqtbase/mkspecs/linux-g++ -Iqtbase/include/QtNetwork -Iqtbase/include/QtDBus -Iqtsensors/src/sensors -Iqtbase/include/QtSensors/6.2.0 -Iqtbase/include/QtSensors/6.2.0/QtSensors -Iqtbase/src/corelib -Iqtbase/include/QtCore/6.2.0 -Iqtbase/include/QtCore/6.2.0/QtCore -Iqtbase/include/QtSensors -DNDEBUG -O2 -fPIC -fvisibility=hidden -fvisibility-inlines-hidden -Wall -Wextra -fno-exceptions -fPIC -Wsuggest-override -std=c++17 -MD -MT qtsensors/src/plugins/sensors/sensortag/CMakeFiles/SensortagSensorPlugin.dir/sensortagbase.cpp.o -MF qtsensors/src/plugins/sensors/sensortag/CMakeFiles/SensortagSensorPlugin.dir/sensortagbase.cpp.o.d -o qtsensors/src/plugins/sensors/sensortag/CMakeFiles/SensortagSensorPlugin.dir/sensortagbase.cpp.o -c qtsensors/src/plugins/sensors/sensortag/sensortagbase.cpp qtsensors/src/plugins/sensors/sensortag/sensortagbase.cpp: In member function ‘void SensorTagBasePrivate::deviceSearch()’: qtsensors/src/plugins/sensors/sensortag/sensortagbase.cpp:62:128: error: no matching function for call to ‘QOverload<QBluetoothDeviceDiscoveryAgent::Error>::of(QBluetoothDeviceDiscoveryAgent::Error (QBluetoothDeviceDiscoveryAgent::*)() const)’ 62 | connect(m_deviceDiscoveryAgent, QOverload<QBluetoothDeviceDiscoveryAgent::Error>::of(&QBluetoothDeviceDiscoveryAgent::error), | ^ In file included from qtbase/include/QtCore/qglobal.h:1, from qtbase/include/QtCore/../../src/corelib/global/qnamespace.h:44, from qtbase/include/QtCore/qnamespace.h:1, from qtbase/include/QtCore/../../src/corelib/kernel/qobjectdefs.h:48, from qtbase/include/QtCore/qobjectdefs.h:1, from qtbase/include/QtCore/../../src/corelib/kernel/qobject.h:46, from qtbase/include/QtCore/qobject.h:1, from qtbase/include/QtCore/QObject:1, from qtsensors/src/plugins/sensors/sensortag/sensortagbase.h:44, from qtsensors/src/plugins/sensors/sensortag/sensortagbase.cpp:41:
Longer log attached. Let me know if you need the full log.
Attachments
For Gerrit Dashboard: QTBUG-94209 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
352736,3 | Fix compilation errors on sensortags | dev | qt/qtsensors | Status: MERGED | +2 | 0 |