Fix compilation errors on sensortags

Additionally add find_package() for bluetooth to the top CMakeLists.txt

Task-number: QTBUG-94209
Task-number: QTBUG-92502
Task-number: QTBUG-92509
Change-Id: Ied1730e6c3758b2734d8a25d1dcbc43236b997d2
Reviewed-by: Andreas Buhr <andreas.buhr@qt.io>